test: adiciona testes para validação do código do local binder/validator