@@ -1,13 +1,12 @@
-package br.com.alura.dojoplaces;
+package br.com.alura.dojoplaces.place;
 
-import br.com.alura.dojoplaces.place.PlaceCreateDTO;
-import br.com.alura.dojoplaces.place.PlaceCreateDTOValidator;
-import br.com.alura.dojoplaces.place.PlaceRepository;
+import org.assertj.core.groups.Tuple;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.validation.BeanPropertyBindingResult;
 import org.springframework.validation.Errors;
+import org.springframework.validation.FieldError;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
@@ -36,7 +35,11 @@ public class PlaceCreateDTOValidatorTest {
 
         assertThat(errors.hasErrors()).isTrue();
         assertThat(errors.getErrorCount()).isEqualTo(1);
-        assertThat(errors.getAllErrors().get(0).getDefaultMessage()).isEqualTo("O Código já está em uso!");
+        assertThat(errors.getFieldErrors())
+                .extracting(FieldError::getField, FieldError::getRejectedValue)
+                .containsExactly(Tuple.tuple("code", "leblon")
+                );
+        assertThat(errors.getAllErrors().getFirst().getDefaultMessage()).isEqualTo("O Código já está em uso!");
     }
 
     @Test
@@ -52,5 +55,6 @@ public class PlaceCreateDTOValidatorTest {
         assertThat(errors.hasErrors()).isFalse();
         assertThat(errors.getErrorCount()).isEqualTo(0);
         assertThat(errors.getFieldErrors()).isEmpty();
+        assertThat(errors.getAllErrors()).isEmpty();
     }
 }
