@@ -1,11 +1,12 @@
-package br.com.alura.dojoplaces;
+package br.com.alura.dojoplaces.place;
 
-import br.com.alura.dojoplaces.place.*;
+import org.assertj.core.groups.Tuple;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.validation.BeanPropertyBindingResult;
 import org.springframework.validation.Errors;
+import org.springframework.validation.FieldError;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
@@ -33,6 +34,25 @@ public class PlaceEditDTOValidatorTest {
 
         assertThat(errors.hasErrors()).isTrue();
         assertThat(errors.getErrorCount()).isEqualTo(1);
-        assertThat(errors.getAllErrors().get(0).getDefaultMessage()).isEqualTo("O Código já está em uso!");
+        assertThat(errors.getFieldErrors())
+                .extracting(FieldError::getField, FieldError::getRejectedValue)
+                .containsExactly(Tuple.tuple("code", "leblon")
+        );
+        assertThat(errors.getAllErrors().getFirst().getDefaultMessage()).isEqualTo("O Código já está em uso!");
+    }
+
+    @Test
+    @DisplayName("Should return no error if the code for the place does not exist")
+    void should_return_no_error_if_the_code_for_the_place_does_not_exist() {
+        PlaceEditDTO placeEditDTO = new PlaceEditDTO(1L, "Leblon", "leblon", "centro", "cajazeiras");
+        Errors errors = new BeanPropertyBindingResult(placeEditDTO, "placeEditDTO");
+
+        when(placeRepository.existsByCodeAndIdNot(placeEditDTO.code(), placeEditDTO.id())).thenReturn(false);
+        placeEditDTOValidator.validate(placeEditDTO, errors);
+
+        assertThat(errors.hasErrors()).isFalse();
+        assertThat(errors.getErrorCount()).isEqualTo(0);
+        assertThat(errors.getFieldErrors()).isEmpty();
+        assertThat(errors.getAllErrors()).isEmpty();
     }
 }
